rm remitly and add meridian

--- a/guide-to-kenya.html
+++ b/guide-to-kenya.html
@@ -406,7 +406,7 @@
 
 			<p>To get M-Pesa, go to a Safaricom store building with your physical passport, not a soft copy, and pay $1 for a Safaricom SIM card. When you insert the SIM card into your phone, you will need to unlock it with a special, four-digit SIM PIN provided by Safaricom on the plastic case containing the SIM card. Doing so will install an app on your phone labeled "Safaricom" or "SIM Toolkit." That app will allow you to activate your M-Pesa account and, optionally, deactivate your SIM PIN so you don't have to enter it whenever you turn on your phone. Before you leave for Kenya, check if your mobile provider carrier-locked your phone. If they did, try calling their customer help line and requesting they unlock it for your trip. If they do not remove the carrier lock, you will not be able to use Safaricom or M-Pesa.</p>
 
-			<p>There are many apps that can send money from your U.S. accounts to your M-Pesa account. I use <a rel="external" target="_blank" href="https://www.sendwave.com/">Sendwave</a> for instant transfers and <a rel="external" target="_blank" href="">Remitly</a> for delayed transfers with better exchange rates.</p>
+			<p>There are many apps that can send money from your U.S. accounts to your M-Pesa account. I use <a rel="external" target="_blank" href="https://try.sendwave.com/kjap/43y219s5">Sendwave</a>.</p>
 			
 			<h3>Taxes</h3>
 			<p>The following is not tax advice. This is just my understanding as an uneducated person.</p>
@@ -440,10 +440,10 @@
 			<ul>
 				<li><a rel="external" target="_blank" href="https://www.safaricom.co.ke/personal/value-added-services/information-services/mysafaricom-app">Safaricom</a>: buying airtime and data</li>
 				<li><a rel="external" target="_blank" href="https://www.safaricom.co.ke/index.php/personal/value-added-services/information-services/m-pesa-app">M-Pesa</a>: mobile money</li>
-				<li><a rel="external" target="_blank" href="https://www.sendwave.com/">Sendwave</a> and <a rel="external" target="_blank" href="">Remitly</a>: send money from your U.S. bank account to your M-Pesa wallet</li>
+				<li><a rel="external" target="_blank" href="https://try.sendwave.com/kjap/43y219s5">Sendwave</a>: send money from your U.S. bank account to your M-Pesa wallet</li>
 				<li><a rel="external" target="_blank" href="https://www.whatsapp.com/download/">WhatsApp</a>: messaging and calling</li>
 				<li><a rel="external" target="_blank" href="https://lens.google/">Google Lens</a>: OCR and translator for written Kiswahili</li>
-				<li><a rel="external" target="_blank" href="https://www.worldtimebuddy.com/mobile-app">Time Buddy</a>: keep track of the time in various parts of the world</li>
+				<li><a rel="external" target="_blank" href="https://rupumped.github.io/meridian">Meridian</a>: keep track of the time in various parts of the world</li>
 				<li><a rel="external" target="_blank" href="https://www.jumia.co.ke/">Jumia</a>: Kenya's version of Amazon</li>
 				<li><a rel="external" target="_blank" href="https://food.jumia.co.ke/">Jumia Food</a> and <a rel="external" target="_blank" href="https://glovoapp.com/">Glovo</a>: food delivery</li>
 				<li><a rel="external" target="_blank" href="https://voice.google.com/">Google Voice</a>: maintaining your U.S. number</li>
