--- a/index.html
+++ b/index.html
@@ -375,6 +375,7 @@
 					<li>International Symposium on Mathematical Theory of Networks and Systems</li>
 					<li>Journal of Field Robotics</li>
 					<li>Oxford Open Energy</li>
+					<li>Renewable Energy</li>
 					<li>Social Sciences &amp; Humanities Open</li>
 					<li>Unconventional Resources</li>
 				</ul>
